# foundation-source

./: .gitignore  CMakeLists.txt  ChangeLog  LICENSE  README.md  README.txt  build.txt  config.h  coremake.mak  root.proj
corec/: CMakeLists.txt  corec.proj  default_config.h
corec/corec/: CMakeLists.txt  confhelper.h  corec.h  corec.proj  corec_config.h.in  corec_exports.h  err.h  full_config.h.in  helper.h  memalloc.h  memheap.h  portab.h
corec/corec/array/: array.c  array.h  array.proj
corec/corec/helpers/: CMakeLists.txt
corec/corec/helpers/bzip2/: UpgradeLog.htm  bzlib.c  bzlib.h
corec/corec/helpers/charconvert/: charconvert.h  charconvert.proj  charconvert_linux.c  charconvert_osx.c  charconvert_palmos.c  charconvert_qtopia.cpp  charconvert_symbian.cpp  charconvert_utf8.c  charconvert_win32.c
corec/corec/helpers/date/: date.h  date.proj  date_libc.c  date_palmos.c  date_ps2sdk.c  date_win32.c
corec/corec/helpers/file/: bufstream.c  file.h  file.proj  file_libc.c  file_ps2sdk.c  file_win32.c  filedb_palmos.c  memstream.c  stream_stdio.c  streams.c  streams.h  tools.c
corec/corec/helpers/md5/: md5.c  md5.h  md5.proj
corec/corec/helpers/parser/: buffer.c  buffer.h  dataheap.c  dataheap.h  hotkey.c  hotkey.h  nodelookup.c  parser.h  parser.proj  parser2.c  strtab.c  strtab.h  strtypes.c  strtypes.h  urlpart.c  urlpart.h
corec/corec/helpers/system/: ccsystem.h  ccsystem_posix.c  ccsystem_win32.c  system.proj
corec/corec/helpers/zlib/: CMakeLists.txt  compress.c  crc32.c  gzguts.h  minigzip.c  trees.c  uncompr.c  zbuild.h  zconf-ng.h  zconf.h  zlib-ng.h  zlib.h  zlib.proj  zutil.c  zutil.h
corec/corec/libc/: libc.proj
corec/corec/libc/palmos/: assert.c  console_palmos.c  console_palmos_m68k.c  math.c  math.h  native_arm.S  native_x86.c  pace.c  pace.h  pace2.c  qsort.c  rand.c  setjmp.S  setjmp.h  sincos.c  strings.c  vsprintf.c
corec/corec/libc/ps2sdk/: boot.c  boot.h  stdint.h
corec/corec/libc/symbian/: memory.h
corec/corec/libc/wince/: assert.c  console_wince.c  math.h
corec/corec/multithread/: multithread.h  multithread.proj  multithread_palmos.c  multithread_ps2sdk.c  multithread_pthread.c  multithread_symbian.cpp  multithread_win32.c
corec/corec/node/: corec.html  node.c  node.h  node.proj  node_internal.h  node_symbian.h  nodebase.h  nodetools.h  nodetree.c  nodetree.h
corec/corec/str/: str.c  str.h  str.proj  str_linux.c  str_osx.c  str_palmos.c  str_ps2sdk.c  str_symbian.cpp  str_utf8.c  str_win32.c
corec/tests/: CMakeLists.txt  file_test.c  node_test.c  string_test.c  tests.proj
include/ebml/: ebml.h  ebml2_init.h
libebml2/: CMakeLists.txt  config.h.in  ebml2_init.c  ebml2_project.h.in  ebml_config.h.in  ebmlbinary.c  ebmlcrc.c  ebmlcrc.h  ebmldate.c  ebmlelement.c  ebmlmain.c  ebmlmaster.c  ebmlnumber.c  ebmlstring.c  ebmlvoid.c  internal.h  libebml2.proj
libebml2/ebml/: ebml.h  ebml2.h  ebml_internal.h
libebml2/ebml2/: ebml.h  ebml_classes.h  ebml_internal.h
libebml2/legacy/: ebml2_legacy_project.h.in  legacy.cpp  legacy.proj
libebml2/legacy/ebml/: EbmlBinary.h  EbmlConfig.h  EbmlContexts.h  EbmlCrc32.h  EbmlDate.h  EbmlDummy.h  EbmlElement.h  EbmlFloat.h  EbmlHead.h  EbmlId.h  EbmlMaster.h  EbmlSInteger.h  EbmlStream.h  EbmlString.h  EbmlSubHead.h  EbmlTypes.h  EbmlUInteger.h  EbmlUnicodeString.h  EbmlVersion.h  EbmlVoid.h  IOCallback.h
libebml2/legacy/ebml/c/: libebml_t.h
libebml2/test/: ebmltree.c  test.proj
libmatroska2/: CMakeLists.txt  MatroskaInfo.h  MatroskaParser.c  MatroskaWriter.c  libmatroska2.proj  matroska2.h  matroska2_init.c  matroska2_project.h.in  matroska_config.h.in  matroska_internal.h  matroska_sem.c  matroskablock.c  matroskamain.c
libmatroska2/MatroskaParser/: MatroskaParser.c  MatroskaParser.h
libmatroska2/MatroskaWriter/: MatroskaWriter.c  MatroskaWriter.h
libmatroska2/bzip2/: CMakeLists.txt  bzip2.c  bzip2.proj
libmatroska2/lavu_lzo/: CMakeLists.txt  lzo.c  lzo.h
libmatroska2/lzokay/: CMakeLists.txt  lzokay.c  lzokay.h
libmatroska2/matroska/: matroska.h  matroska2.h  matroska_internal.h  matroska_sem.h
libmatroska2/matroska2/: matroska.h  matroska_classes.h  matroska_internal.h  matroska_sem.h
libmatroska2/minilzo/: CMakeLists.txt  Makefile  lzodefs.h  minilzo.c  minilzo.proj
libmatroska2/test/: mkvtree.c  test.proj
libmatroska2/tremor/: CMakeLists.txt  Makefile.am  block.c  block.h  floor0.c  floor1.c  info.c  os.h  os_types.h  sharedbook.c
libmatroska2/zlib/: 0001-CMake-don-t-build-dynamic-zlib.patch
mkclean/: CMakeLists.txt  CMakeLists.txt.in  ChangeLog  ChangeLog.txt  ReadMe.txt  bootstrap.sh  config.h  config.h.in  configure  default_config.h  mkclean.c  mkclean.proj  pkg.sh  pkg.sh.in  src.br  src.br.in
mkclean/regression/: CMakeLists.txt  mkcleanreg.c  mkcleanreg.py  regression.mkc  regression.proj
mkclean/tremor/: Version_script.in  block.c  configure.in  info.c  ivorbiscodec.h  synthesis.c  vorbisfile.c
mkclean2/: CMakeLists.txt  CMakeLists.txt.in  ChangeLog.txt  mkclean.cpp  mkclean2_project.h.in  porting.h
mkparts/: CMakeLists.txt  CMakeLists.txt.in  ChangeLog.txt  ReadMe.txt  configure  default_config.h  mkparts.c  mkparts.proj  mkparts_project.h.in  pkg.sh.in  src.br  src.br.in
mkvalidator/: CMakeLists.txt  CMakeLists.txt.in  ChangeLog  ChangeLog.txt  ReadMe.txt  bootstrap.sh  config.h.in  configure  default_config.h  mkvalidator.c  mkvalidator.proj  mkvalidator_project.h.in  pkg.sh  src.br
mkvalidator2/: CMakeLists.txt  ChangeLog.txt  ReadMe.txt  mkvalidator.cpp  src.br.in
spectool/: .gitignore  README.md  bootstrap  bootstrap.mak  data2lib.c  data2lib2.c  data2spec.c  default_config.h  ebmlschema2drupaltable.xsl  schema_2_kaxsemantic_cpp.xsl  schema_2_kaxsemantic_cpp_1x.xsl  schema_2_kaxsemantic_h.xsl  schema_2_kaxsemantic_h_1x.xsl  schema_2_kaxsematic_cpp.xsl  schema_2_kaxsematic_h.xsl  schema_2_lavf_h.xsl  schema_2_lavf_sem_c.xsl  schema_2_matroska_sem_c.xsl  schema_2_matroska_sem_h.xsl  spec2data.c  spec_element.c  spec_element.h  specdata.xml  spectool.proj  tabler.c  tools.mak
test_parser/: main.cpp
test_writer_result/: main.cpp
(+336 files in other folders)
